2004-10-25  Ian Lance Taylor  <ian@wasabisystems.com>

	* stabs.c (stab_demangle_v3_arglist): New static function, broken
	out of stab_demangle_v3_argtypes.
	(stab_demangle_v3_argtypes): Call it.
	(stab_demangle_v3_arg): Handle DEMANGLE_COMPONENT_FUNCTION_TYPE.
	If we find an unrecognized component, print out its number.

2004-10-25  David Mosberger  <davidm@hpl.hp.com>

	* readelf.c (slurp_ia64_unwind_table): Support relocations against
	non-section symbols by adding in the symbol value.

2004-10-25  Nick Clifton  <nickc@redhat.com>

	PR 465
	* readelf.c (dynamic_strings_length): New global variable.
	(VALID_DYNAMIC_NAME, GET_DYNAMIC_NAME): New macros for accessing
	strings in the dynamic string table.
	(process_section_headers): Initialise dynamic_strings_length.
	(process_dynamic_section): Likewise.
	(process_object): Reset dynamic_string_length when the buffer is freed.
	(dynamic_sections_mips_val): Use the new macros.
	(process_dynamic_section): Likewise.
	(process_version_sections): Likewise.
	(process_symbol_table): Likewise.
	(process_syminfo): Likewise.
	(process_mips_specific): Likewise.
	(dump_relocations): Add a new parameter 'strtablen' and use this
	to verify that string offset in a given reloc is valid.  Print a
	suitable error message otherwise.
	(process_relocs): Pass the new argument to dump_relocations.

2004-10-23  Aaron W. LaFramboise  <aaron98wiridge9@aaronwl.com>

	* dlltool.c: Include <assert.h>.
	(PREFIX_ALIAS_BASE): Define.
	(struct export): Add member import_name;
	(def_exports): Set import_name.
	(make_one_lib_file): Remove prefix alias code, use import_name
	in .idata$6.
	(gen_lib_file): Create and delete aliases.

2004-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (process_section_groups): Free symtab after use.

2004-10-18  Tommy Pettersson <ptp@lysator.liu.se>
	    Nick Clifton  <nickc@redhat.com>

	* strings.c (usage): Place radix values for -t option into the
	correct order.
